Bug 416165 - Systemsettings: Window-rules screen and desktop are mixed (wayland)
Summary: Systemsettings: Window-rules screen and desktop are mixed (wayland)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 5.17.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-12 14:08 UTC by qqqqqqqqq9
Modified: 2020-05-19 17:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2020-01-12 14:08:37 UTC
SUMMARY
Systemsettings: Window-rules screen and desktop are mixed.

STEPS TO REPRODUCE
1. Navigate to Workspace-window management - window rules
2. create a new rule and navigate to Size & Position
A)
3. Activate Desktop - force - click the dropdown-menu

B) 

3. Activate Screen -  force 

OBSERVED RESULT
A) The dropdown menu offers 1: and All desktops 
activiting them move the window to workspace 1 or all workspaces, respectively.

B) I don't know how it's called but I can select any number. 
The settings has no obvious effect which is not supriseing since I have only on Screen.

EXPECTED RESULT

A) I have 6 workspaces, so it should offer workspace 1-6.

B) It should offer only 1: since that is my current wayland display.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ismael Asensio 2020-05-19 09:52:12 UTC
Git commit bd5e34f5b44e6baf46b1f994dd7c6d66a243d366 by Ismael Asensio.
Committed on 18/05/2020 at 22:49.
Pushed by davidedmundson into branch 'Plasma/5.19'.

[kcm/kwinrules] Detect virtual desktops in Wayland

The list of virtual desktops is retrieved using a DBus method, instead of
`KWindowSystem`, to make it work both in Wayland (as well as X11).

FIXED-IN: 5.20

M  +1    -0    kcmkwin/kwinrules/CMakeLists.txt
M  +2    -2    kcmkwin/kwinrules/ruleitem.cpp
M  +38   -3    kcmkwin/kwinrules/rulesmodel.cpp
M  +6    -1    kcmkwin/kwinrules/rulesmodel.h

https://invent.kde.org/plasma/kwin/commit/bd5e34f5b44e6baf46b1f994dd7c6d66a243d366